--- a/slides.qmd
+++ b/slides.qmd
@@ -22,7 +22,7 @@ format:
 
 ::: {.incremental}
 
-1. Pandas is slow, well yes but also not so smuch if you use it the right way.
+1. Pandas is slow, well yes but also not so much if you use it the right way.
 
     - [Apache Arrow and the "10 Things I Hate About pandas"](https://wesmckinney.com/blog/apache-arrow-pandas-internals/) (<font color=red size=5>A 2017 post from the creator of Pandas..</font>)
 
@@ -69,7 +69,7 @@ import polars as pl
 Read data as usual.
 
 ```{.python}
-df = pd.read_parquet("s3://nyc-tlc/trip data/yellow_tripdata_2022-01.parquet")
+df = pl.read_parquet("s3://nyc-tlc/trip data/yellow_tripdata_2022-01.parquet")
 ```
 
 ## Coming from Pandas to Polars
